[package]
name = "rusty-ntr-viewer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
crossbeam-channel.workspace = true
eframe.workspace = true
ntr-protocol = { path = "../../crates/ntr-protocol" }
serde.workspace = true

[package.metadata.bundle]
name = "RustyNTRViewer"
identifier = "net.minagirgis.rustyntrviewer"
copyright = "Copyright (c) 2026 Mina Girgis"
category = "public.app-category.utilities"

