[package]
name = "ntr-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
crossbeam-channel.workspace = true
serde.workspace = true
thiserror.workspace = true
ntr-codec = { path = "../ntr-codec" }

